build/resources/test/LO-2/ValidPrograms/test_76.lo
// *Good testcase*
// Finding GCD
// main return value: 3533
// Author: Fall 2021 TAs

int gcd(int a, int b) {
    int c;
    {
      if ((a=0)) {
         c = b;
      } else {
         if ((b=0)) {
            c = a;
         }
         else {
            if ((a=b)) {
               c = a;
            }
            else {
               if ((a>b)) {
                    c = gcd((a-b), b);
               }
               else {
                c = gcd(a, (b-a));
               }
            }
          }
       }
       return c;
       }
}

int main() {
    int a,b,c;
    {
      a = 7359239;
      b = 10729721;
      c = gcd(a, b);
      return c;
    }
}