build/resources/test/LO-2/InvalidPrograms/test_21.lo
// Missing operand

bool main(){
  int a, b;
  {
    a = 396;
    b = 156;
    return (? a : b);
  }
}